crates/es-fluent-generate/tests/snapshots/generate_tests__generate_conservative_mode_preserves_existing.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
existing-message = Existing Content

## TestEnum

test_enum-Variant1 = Variant1
