crates/es-fluent-generate/tests/snapshots/generate_tests__generate_inserts_variants_into_empty_group.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## CountryLabelVariants

country_label_variants-Canada = Canada
country_label_variants-USA = Usa
