crates/es-fluent-generate/tests/snapshots/generate_tests__generate_mixed_namespaced_and_non_namespaced_main.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: regular_content
---
## GlobalError

global_error-Unknown = Unknown
