crates/es-fluent-generate/tests/snapshots/generate_tests__generate_mixed_namespaced_and_non_namespaced_ui.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: namespaced_content
---
## UiError

ui_error-InvalidInput = Invalid Input
