crates/es-fluent-generate/tests/snapshots/generate_tests__generate_multiple_namespaces_errors.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: errors_content
---
## ApiError

api_error-NotFound = Not Found
