crates/es-fluent-generate/tests/snapshots/generate_tests__generate_multiple_namespaces_ui.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: ui_content
---
## Button

button-Submit = Submit
