crates/es-fluent-generate/tests/snapshots/generate_tests__generate_nested_namespace_creates_parent_dirs.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## FormError

form_error-InvalidEmail = Invalid Email
