crates/es-fluent-generate/tests/snapshots/generate_tests__generate_relocates_keys_between_similar_group_names.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## EmptyStructVariants

empty_struct_variants_label = Empty Struct Variants

## EmptyStruct

empty_struct_label = Empty Struct
empty_struct = Empty Struct
