crates/es-fluent-generate/tests/snapshots/generate_tests__generate_relocates_late_group_keys_without_duplicates.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## GroupA

group_a-A1 = Value A1

## GroupB

group_b-B1 = B1
