crates/es-fluent-generate/tests/snapshots/generate_tests__generate_with_items.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## TestEnum

test_enum-Variant1 = Variant1
