crates/es-fluent-generate/tests/snapshots/generate_tests__generate_with_namespace_creates_subdirectory.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## UiButton

ui_button-Click = Click
